<resources>
    <string name="app_name">Ecommerce Demo</string>
    <string name="str_product_image">Product Image</string>
    <string name="str_price">Price:</string>
    <string name="str_view_all">View all</string>
    <string name="str_tab_layout">Product Tab Layout</string>
    <string name="str_search">Search</string>
    <string name="str_filter">Filter</string>
    <string name="str_select_price_range">Select Price Range</string>
    <string name="str_name">Name</string>
    <string name="str_back_arrow">Back Arrow</string>
    <string name="str_price_range">Price Range:</string>
    <string name="str_description">Description</string>
    <string name="str_reviews">Reviews</string>
    <string name="str_reviews_with_colon">Reviews:</string>
    <string name="str_ratings_and_reviews">Rating and Reviews</string>
    <string name="str_add_review">Add Review</string>
    <string name="str_add_a_review">Add a review</string>
    <string name="str_submit_review">Submit Review</string>
    <string name="str_helpful">Helpful</string>
    <string name="str_nearest_location">Nearest Location</string>
    <string name="str_view_full">View Full</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_all_categories">All categories</string>
    <string name="str_wishlist">Wishlist</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_language">Language</string>
    <string name="str_dark_mode">Dark Mode</string>
    <string name="str_about_qaaren">About Qaaren</string>
    <string name="str_email">Email</string>
    <string name="str_push_notification">Push Nofitications</string>
    <string name="str_mute_notification">Mute All Notifications</string>
    <string name="str_login_to_your_profile">Login to your profile</string>
    <string name="str_my_wishlist">My Wishlist</string>
    <string name="str_select_sources">Select Sources</string>
    <string name="str_personal_information">Personal Information</string>
    <string name="str_my_sources">My Sources</string>
    <string name="str_my_categories">My Categories</string>
    <string name="str_user_name">User name</string>
    <string name="str_edit">Edit</string>
    <string name="str_save">Save</string>
    <string name="str_done">Done</string>
    <string name="str_selected_sources">Selected Sources</string>
    <string name="str_browse_all">Browse All</string>
    <string name="str_selected_categories">Selected Categories</string>
    <string name="str_customization">Customization</string>
    <string name="str_sources">Sources</string>
    <string name="str_all_sources">All Sources</string>
    <string name="str_continue">Continue</string>
    <string name="str_language_selection">Language Selection</string>
    <string name="str_english">English</string>
    <string name="str_arabic">Arabic</string>
    <string name="str_temp_title">Iphone 14 pro </string>
    <string name="str_temp_price">80-120 SAR</string>
    <string name="str_search_compare_price">Search and Compare Prices</string>
    <string name="str_price_compare_des">Find the right, better and cheaper products and save money by comparing prices for a particular product.</string>
    <string name="str_no_internet_connection">Make sure you have an active internet connection</string>
    <string name="str_refresh">Refresh</string>
    <string name="str_please_wait">Please wait...</string>
    <string name="str_sent_confirmation_email">We\'ve sent a confirmation email to:</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_email_not_fetched">Google email is not fetched, try again</string>
    <string name="str_an_error_occur">An error occur</string>
    <string name="str_no_record_found">No Record is found!</string>
    <string name="str_no_review_exist">No review exist!</string>
    <string name="str_no_changes_detected">No changes detected!</string>
    <string name="str_contact_number">Contact Number</string>
    <string name="str_address">Address</string>
    <string name="str_state">State</string>
    <string name="str_country">Country</string>
    <string name="str_update_password">Update Password</string>
    <string name="str_current_password">Current Password</string>
    <string name="str_current_password_is_required">Current password is required</string>
    <string name="str_update_password_"><u>Update password?</u></string>
    <string name="str_logout">Logout</string>
    <string name="str_first_select_an_event">first select an event</string>
    <string name="str_select_event">Select Event</string>
    <string name="str_product_id_not_null">Product id must not be null</string>
    <string name="str_first_select_source">first select source</string>
    <string name="str_all_filter_products_of">All filter products of</string>
    <string name="str_change_your_email">Change your email</string>
    <string name="str_change">Change</string>
    <string name="str_welcome_to_qareen">Welcome to Qareen</string>
    <string name="str_about_qareen">Saudi\'s independent price comparison service with over 1000 products. Qaaren\'s ambition is to offer consumers a fantastic service. You can rest assured that we are always on your side as a consumer in the online jungle of retailers and products. We love what we do and are incredibly proud to help people make wise decisions and save a lot of money – every day of the year.<br />
        Qaaren brings great offers every day – compare prices and offers from over 100 retailers. We keep the prices updated on daily basis. When a consumer compares specific products and prices, they are normally close to making a purchase. So Qaaren\'s visitors have a high level of willingness to act and buy.</string>
    <string name="str_compare_decide"><![CDATA[Compare & Decide]]></string>
    <string name="str_compare_and_detail">Saudi\'s first independent price comparison website with great offers everyday. Qaaren allows user to customize products and compare prices at the same time, thus helping the user in customizing shopping habits. It also predicts best time for buying a product. What Qaaren do is really exciting – E-commerce is seeing a strong growth and we want to help shoppers and customers make smarter decisions because its totally free to use and easy to understand.</string>
    <string name="str_who_are_we">Who are we</string>
    <string name="str_who_we_r_des">E-commerce is affected by the abundance of information available on the internet. Consumers are confused about where to buy, whether this is the best price, the historical pricing, etc. We want to make the most of your time, money, and energy, so compare, choose, and purchase while you can.</string>
    <string name="str_our_vision">Our vision</string>
    <string name="str_our_vision_des">Our vision is to become a trustworthy, impartial resource that consumers can always rely on when doing online product comparisons. We find what we do to be quite exciting because we want to support consumers in making wiser decisions as e-commerce continues to develop.</string>
    <string name="str_our_mission">Our mission</string>
    <string name="str_our_mission_des">Qaaren\'s Mission is to assist customers in locating superior goods and pricing. By comparing costs for a certain product, we assist hundreds of thousands of consumers each month in finding better, more affordable products and saving money.</string>
    <string name="str_privacy_setting_des">Any website you visit has the potential to save or retrieve data on your browser, mostly in the form of cookies. This data may pertain to you, your choices, or your device and is mostly used to ensure that the site performs, as you would expect. You may modify our default settings and learn more about the kind of cookies we use down below. However, disabling some cookie types might affect how the site works for you and the services we can provide.</string>
    <string name="str_terms_and_conditions">Terms and Conditions</string>
    <string name="str_term_condition_des">You accept these Terms and Conditions and any supplementary guidelines for particular campaigns by using this site. Additionally, you consent to abide by any standards or restrictions for any Product or Service displayed on the Site. These Terms and Conditions are hereby, incorporated by reference to all such specified guidelines and restrictions. Please don\'t use this site if you don\'t agree to these terms and conditions.</string>
    <string name="str_privacy_des">We safeguard your private information and make every effort to maintain high standards of data security. This statement of privacy Privacy Policy describes how we may collect and utilize your personal information. Additionally, it outlines your rights and how to exercise them. It is vital that you understand the Privacy Policy and are comfortable with how we handle your personal information. If you have any questions, please don\'t hesitate to get in touch with us.</string>
    <string name="str_disclaimer">Disclaimer of warranties and limitation of liability</string>
    <string name="str_disclaimer_des">By using the Site, the Products and Services, or submitting any ideas and/or related materials to us, you are hereby agreeing to release Indemnities from any and all claims, demands, debts, obligations, damages (actual or consequential), costs, and expenses of any kind or nature whatsoever, whether known or unknown, suspected or unsuspected, disclosed or undisclosed, that you may have against them arising out of or in any way related to such disputes and/or to the Products and Services or to any disputes regarding use of ideas and/or related materials submitted to Indemnities.</string>
    <string name="str_privacy_note_des"><b>Note:</b>Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our privacy policy</string>
    <string name="str_update">Update</string>
    <string name="str_login_is_required">Login is required!</string>
    <string name="str_delete_account">Delete Account</string>
    <string name="str_account_deleted">Your account has been deleted successfully!</string>
    <string name="str_delete_user_account">Delete Account?</string>
    <string name="str_delete_profile">Are you sure to delete your profile?</string>
    <string name="str_yes">YES</string>
    <string name="str_no">NO</string>
    <string name="str_turn_on_location">Please turn on location</string>
    <string name="str_search_by_title_or_by_price">Search by title or by price</string>
    <string name="str_cart_is_empty">Cart is empty</string>
    <string name="str_cart">Cart</string>
    <string name="str_amount_price">Amount Price</string>
    <string name="str_check_out">Check Out</string>
    <string name="str_shipping">Shipping</string>
    <string name="str_add">Add</string>
    <string name="str_add_shipping_address">Add shipping address</string>
    <string name="str_payment">Payment</string>
    <string name="str_add_payment_info">Add payment info</string>
    <string name="str_checkout">Checkout</string>
    <string name="str_summary">Summary</string>
    <string name="str_subtotal">Subtotal</string>
    <string name="str_free">Free</string>
    <string name="str_tax">Tax</string>
    <string name="str_total">Total</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_pay_now">Pay Now</string>
    <string name="str_add_payment_information">Add Payment Information</string>
    <string name="str_cardholder_name">Cardholder Name</string>
    <string name="str_card_number">Card Number</string>
    <string name="str_mm_yy">MM/YY</string>
    <string name="str_cvv">CVV</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_city">City</string>
    <string name="str_zip_code">Zip Code</string>
    <string name="str_home">Home</string>
</resources>